Ensure overflow is hidden on promo modal

--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -74,6 +74,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 
   .modal__content {
     align-items: center;
